[project]
name = "veo-3-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Dodsworth",email = "michael@waitify.io"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "streamlit (>=1.49.0,<2.0.0)",
    "openai (>=1.102.0,<2.0.0)",
    "google-genai (>=1.32.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
